# Django-with-DRF-project

./: .env.db.example  .env.dev  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.prod  celery_start.sh  entrypoint.sh  gunicorn_conf.py  pyproject.toml  requirements.txt
backend/app/chats/: admin.py  models.py  serializers.py  websocket_urls.py
backend/app/chats/api/: chatters.py  views.py
backend/app/chats/migrations/: 0001_initial.py
backend/app/config/: asgi.py  routers.py  settings.py  urls.py  utils.py
backend/app/products/: models.py  serializers.py  urls.py
backend/app/products/api/: views.py  viewsets.py
backend/app/products/migrations/: 0004_alter_product_user.py
backend/app/search/: views.py
backend/app/static/: index.js
backend/app/users/: README.md  managers.py  mixins.py  models.py  routers.py  serializers.py  tasks.py  urls.py  validators.py
backend/app/users/api/: permissions.py  views.py  viewsets.py
backend/chats/: models.py  urls.py  websocket_urls.py
backend/chats/api/: chatters.py  views.py
backend/chats/templates/chats/: chat.html  index.html
backend/django_app/: asgi.py  routers.py  settings.py  urls.py
backend/products/: models.py  serializers.py  urls.py  validators.py  views.py  viewsets.py
backend/products/migrations/: 0001_initial.py  0002_product_user.py  0003_product_public.py
backend/search/: views.py
backend/static/: chat.js  style.css
backend/users/: mixins.py  permissions.py  serializers.py  urls.py  views.py
(+2 files in other folders)
